before changing cell